Rename /watson to /watsonserver with alias /ws

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,5 +5,7 @@ author: FrankHeijden
 api-version: "1.13"
 
 commands:
-  watson:
+  watsonserver:
     usage: "/<command>"
+    aliases:
+    - "ws"
